# kartvisare

./: README.md
backend/: .gitignore  Cargo.toml  run.sh  start.sh  test.sh
backend/cmd/: main.go
backend/internal/controller/: layer_controller.go  user_controller.go  wms_controller.go
backend/internal/model/: layer.go  user_group.go  wms.go
backend/internal/repository/: layer_repository.go  user_in_memory_repo.go  user_postgres_repo.go  user_repository.go  wms_in_memory_repo.go  wms_postgres_repo.go  wms_repository.go
backend/internal/service/: layer_service.go  user_service.go  wms_service.go
backend/src/: main.rs
backend/src/controller/: mod.rs  user_controller.rs  wms_controller.rs
backend/src/domain/: mod.rs  session.rs  user.rs  wms.rs  wms_details.rs  wms_group.rs  wms_summary.rs
backend/src/middleware/: auth.rs
backend/src/repository/: mod.rs  repo_error.rs  session_store.rs  user_repository.rs  wms_repository.rs
backend/src/service/: idp_service.rs  mod.rs  session_service.rs  user_service.rs  wms_service.rs
backend_rust/: .gitignore
backend_rust/src/: main.rs
backend_rust/src/controller/: user_controller.rs
backend_rust/src/domain/: user.rs
databas/: docker-compose.yml  init.sql  setup_db.sh
databas/localhost/: testdata.sql
database/localhost/: docker-compose.yml  setup_db.sh  testdata.sql
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Canvas.tsx  MapViewer.css  MapViewer.tsx  (+8 more)
rust_backend/: Cargo.toml
rust_backend/src/: main.rs
(+9 files in other folders)
